@@ -1,3 +1,8 @@
+[B]Version 1.0.2 - 2012-09-09[/B]
+- Updated to match site changes
+- Changed video streams to use M3U8 links
+- Now using script.module.buggalo
+
 [B]Version 1.0.1 - 2011-12-18[/B]
 - Fixed icon dimensions
 
